# study

pingpong/: CMakeLists.txt  connection.cpp  connection.h  game_config.h  str_tool.cpp  str_tool.h
pingpong/client/: clnt_session.cpp  clnt_session.h  main.cpp
pingpong/mvc/: model.h  network_view.h  screen_view.h  view.h
pingpong/server/: main.cpp  player.cpp  player.h  server.cpp  server.h  srv_session.cpp  srv_session.h
task_11_join_server/: CMakeLists.txt  asio_server.cpp  asio_server.h  join_server.cpp  join_server.h  main.cpp  str_tool.cpp  str_tool.h
